--- a/app/templates/landingpage.html
+++ b/app/templates/landingpage.html
@@ -74,7 +74,7 @@
           <figure>
             <div><a href="/browse/{{cat}}"><img src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/logo/home_{{cat}}.png" alt="img05"></a></div>
             <figcaption>              
-              <a class="navigation" data-toggle="modal" href="#{{cat}}_Modal">Recommend</a>           
+              <a class="navigation" data-toggle="modal" href="#{{cat|space_to_underscore}}_Modal">Recommend</a>           
             </figcaption>
           </figure>
 
