fixed precaching image and font

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -121,6 +121,7 @@ $( document ).ready(function() {
 </head>
 
 <body class="shop">
+
 <div id="wrap">
   <!-- Reco PopUp -->
   {%for catType in all_cat_details%}
@@ -385,5 +386,7 @@ so just answer few questions and we will suggest the best product according to y
     });
 </script>
 <!-- URL Hit Modal PopUp -->
+<!-- Hidden font awesome load icons -->
+<i class="fa fa-battery-full" style="visibility:hidden;opacity:0;position:relative;left:-1000px;"></i>
 </body>
 </html>
