Adding Category Admin

--- a/app/templates/admin/AdminIndex.html
+++ b/app/templates/admin/AdminIndex.html
@@ -5,7 +5,7 @@
 	</tr>
 	<tr>
 		<td><a href="banner/home">Home Page Banner</a></td>
-		<td>Set Home-Page Banners and logos of MediapUblications</td>
+		<td>Set Home-Page Banners and logos of MediaPublications</td>
 	</tr>
 
 	<tr>
