--- a/app/templates/admin/listing.html
+++ b/app/templates/admin/listing.html
@@ -28,7 +28,7 @@
 							<option value="/admin/banner/listing?category={{cat}}">{{cat}}</option>
 							{%endif%}
 						{%endfor%}
-						
+						<option value="/admin/banner/listing?category=new">new</option>
 					</select>
 					{%if category == 'new'%}
 					<p><b>Enter Category</b></p>
